<?xml version="1.0"?>
<package format="2">
  <name>iiwa_com</name>
  <version>0.1.0</version>
  <description>
  Enables basic communication with a KUKA LBR iiwa robot by utilizing a Sunrise
  Project and ROS. For now the package focuses on receiving the robots state.
  </description>
  <maintainer email="tim.uebelhoer@rwth-aachen.de">Tim Übelhör</maintainer>
  <license>MIT</license>
  <author email="tim.uebelhoer@rwth-aachen.de">Tim Übelhör</author>

  <doc_depend>doxygen</doc_depend>
  <buildtool_depend>catkin</buildtool_depend>
  <doc_depend>doxygen</doc_depend>
  <depend>Protobuf</depend>
  <depend>sensor_msgs</depend>
  <depend>tf2_ros</depend>

  <export>
    <build_type>catkin</build_type>
  </export>
</package>
